contact page fixed

--- a/index.html
+++ b/index.html
@@ -123,25 +123,86 @@
 <!-- /slider-wrapper -->           
 </section>
 <!--/Slider--><!--Services-->
-<section id="services">
-    <div class="container">
-        <div class="row">
-            <div style="width: 70%; float: left;">
-                <h3>Why Choose Us?</h3>
-                <p>At InDeft, we customise our solutions to fit according to your needs, not the other way around. We go out of our way to understand how you work and the challenges you face to have a better understanding about your business. With latest technology, affordable pricing, experienced technicians and dedicated service is all here to take you to the next level.</p>
-                <p>We believe in keeping our clients happy, and our history proves so. And our client case stories to will support this too!</p>
-                <p>InDeft offers a full range of IT consulting, services, solutions and support services tailored to achieve results, match your priorities, and improve your organizations productivity.</p>
-            </div>
-            <div class="col-md-4">
-                <iframe width="360" height="233" src="https://www.youtube.com/embed/o6-su4RJWto" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-            </div>
-            <a href="" class="btn btn-default" style=" border-radius: 5px; border: #0e0e0e 2px;">
-                Get in touch
-            </a>
-        </div>
-    </div>
 
-</section>
+    <section id="home-cols">
+        <div class="container">
+            <ul class="gallery col-4">
+                <!--Item 1-->
+                <li>
+                    <div class="preview">
+                        <img alt=" " src="https://www.indeftts.com/img/info_box_01.jpg">
+                    </div>
+                    <div class="desc">
+                        <h5>APPLICATION DEVELOPMENT</h5>
+                        <p>At InDeft, we specialize in developing business and automation softwares to automate everyday workflow of an organization and your make life easier. We create customized solutions to best suit your needs.</p>
+                    </div>
+                </li>
+                <!--/Item 1-->
+
+                <!--Item 2-->
+                <li>
+                    <div class="preview">
+                        <img alt=" " src="https://www.indeftts.com/img/info_box_02.jpg">
+                    </div>
+                    <div class="desc">
+                        <h5>CONSULTING SERVICES</h5>
+                        <p>With latest technologies and a highly qualified team, we design winning strategies to make your business profitable. Our highly certified IT specialists will help you to increase business performance.</p>
+                    </div>
+                </li>
+                <!--/Item 2-->
+
+                <!--Item 3-->
+                <li>
+                    <div class="preview">
+                        <img alt=" " src="https://www.indeftts.com/img/info_box_03.jpg">
+                    </div>
+                    <div class="desc">
+                        <h5>MANAGED SERVICES</h5>
+                        <p>At InDeft, we offer reliable and cost effective IT infrastructure management services. Our experienced team, you can create the right environment to minimize the cost and load on your core IT infrastructure</p>
+                    </div>
+                </li>
+                <!--/Item 3-->
+
+
+                <!--Item 4-->
+                <li>
+                    <div class="preview">
+                        <img alt=" " src="https://www.indeftts.com/img/info_box_04.jpg">
+                    </div>
+                    <div class="desc">
+                        <h5>PROFESSIONAL SERVICES
+
+                        </h5>
+                        <p>To provide you world class services, we make sure that our professional service integration is not just a successful deployment but also can be actively managed, utilized as well as fully secure.
+
+                        </p>
+                    </div>
+                </li>
+                <!--/Item 4-->
+
+            </ul>
+        </div>
+    </section>
+
+    <section id="services">
+        <div class="container">
+            <div class="row">
+                <div style="width: 70%; float: left;">
+                    <h3>Why Choose Us?</h3>
+                    <p>At InDeft, we customise our solutions to fit according to your needs, not the other way around. We go out of our way to understand how you work and the challenges you face to have a better understanding about your business. With latest technology, affordable pricing, experienced technicians and dedicated service is all here to take you to the next level.</p>
+                    <p>We believe in keeping our clients happy, and our history proves so. And our client case stories to will support this too!</p>
+                    <p>InDeft offers a full range of IT consulting, services, solutions and support services tailored to achieve results, match your priorities, and improve your organizations productivity.</p>
+                </div>
+                <div class="col-md-4">
+                    <iframe width="360" height="233" src="https://www.youtube.com/embed/o6-su4RJWto" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                </div>
+                <a href="" class="btn btn-default" style=" border-radius: 5px; border: #0e0e0e 2px;">
+                    Get in touch
+                </a>
+            </div>
+        </div>
+
+    </section>
 
     <section id="testimonial-carousel">
         <div class='row'>
