--- a/contact-us.html
+++ b/contact-us.html
@@ -26,7 +26,8 @@
     <link rel="apple-touch-icon-precomposed" href="images/ico/apple-touch-icon-57-precomposed.png">
 </head>
 
-<body>
+<body style="background-image: url(https://www.indeftts.com/img/small_bg.jpg);
+    padding: 40px 0;">
 
     <!--Header-->
     <header class="navbar navbar-fixed-top">
@@ -70,33 +71,61 @@
     </header>
     <!-- /header -->
 
-    <section class="no-margin">
-        <iframe width="100%" height="200" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d876.0899498181742!2d77.28753250000003!3d28.55895660000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce40a8e6e0caf%3A0xf7d2ce6fab19bcde!2s259+A%2F3%2C+Noor+Nagar+Extension%2C+Jamia+Nagar%2C+Zakir+Nagar+Okhla%2C+New+Delhi%2C+Delhi+110025!5e0!3m2!1sen!2sin!4v1434114588799"></iframe>
+    <section class="contact-title">
+        <div class="container">
+            <div class="row-fluid">
+                <img src="https://www.indeftts.com/img/slider/contact.jpg" alt="">
+            </div>
+        </div>
     </section>
 
     <section id="contact-page" class="container">
         <div class="row-fluid">
-          <div class="span3">
-            <h4>Our Address            </h4>
-            <p>
-                <i class="icon-map-marker pull-left"></i>259A/3, Nayyar Manzil, Jamia Nagar, </p>
-            <p>Okhla -110025</p>
-            <p>
-                <i class="icon-envelope"></i> &nbsp;info@whitestreak.in
-            </p>
-            <p>
-                <i class="icon-phone"></i> &nbsp;+91-9953100933 <br>&nbsp;&nbsp;&nbsp;&nbsp; +91-9958994854</p>
-            <p>
-                <i class="icon-globe"></i> &nbsp;www.whitestreak.in
-            </p>
-            
+            <div>
+
+                <div class="span6">
+                    <h4>Our Address </h4>
+                    <p>
+                        <i class="icon-map-marker pull-left"></i>259A/3, Nayyar Manzil, Jamia Nagar, </p>
+                    <p>Okhla -110025</p>
+                    <p>
+                        <i class="icon-envelope"></i> &nbsp;info@whitestreak.in
+                    </p>
+                    <p>
+                        <i class="icon-phone"></i> &nbsp;+91-9953100933 <br>&nbsp;&nbsp;&nbsp;&nbsp; +91-9958994854</p>
+                    <p>
+                        <i class="icon-globe"></i> &nbsp;www.whitestreak.in
+                    </p>
+
+                </div>
+            </div>
+
+            <div>
+
+                <div class="span6">
+                    <form action="" class="form-inline">
+                        <input type="text" class="form-control" placeholder="First Name">
+                        <input type="text" class="form-control" placeholder="Last Name">
+                    </form>
+
+                    <form action="" class="form-inline">
+                        <input type="email" class="form-control" placeholder="Email">
+                        <input type="text" class="form-control" placeholder="Phone number">
+                    </form>
+
+                    <!--<form action="">-->
+                        <textarea name="message" id="" cols="30" rows="5" placeholder="Message"></textarea>
+                    <!--</form>-->
+
+                </div>
+            </div>
+
         </div>
-		
-    </div>
-    <p>We encourage new photographers and fresh talent in the field. For jobs and other collaborations, send a mail to jobs@whitestreak.in</p>
-    <br>
-	
-</section>
+    </section>
+
+    <section class="no-margin">
+        <iframe width="100%" height="200" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d876.0899498181742!2d77.28753250000003!3d28.55895660000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce40a8e6e0caf%3A0xf7d2ce6fab19bcde!2s259+A%2F3%2C+Noor+Nagar+Extension%2C+Jamia+Nagar%2C+Zakir+Nagar+Okhla%2C+New+Delhi%2C+Delhi+110025!5e0!3m2!1sen!2sin!4v1434114588799"></iframe>
+    </section>
 
 <!--Bottom-->
 <section id="bottom" class="main">
