--- a/contact-us.html
+++ b/contact-us.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Contact Us | White Streak</title>
+    <title>Contact Us | InDeft Technology Solutions Pvt Ltd.</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
 
@@ -50,14 +50,6 @@
                                 <li><a href="pricing.html">Our Different Packages</a></li>
                             </ul>
 						</li>
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Gallery <i class="icon-angle-down"></i></a>
-                            <ul class="dropdown-menu">
-                                <li><a href="gallery.html">Child Photography</a></li>
-                                <li><a href="parent-gallery.html">Parent Child Photography</a></li>
-                                <li><a href="album.html">Albums and Posters</a></li>
-                                <li><a href="gifts.html">Customized Gifts</a></li>
-                            </ul>
                         </li>
                         <li><a href="partners.html">Partners</a></li>
                         <li><a href="careers.html">Career</a></li>
@@ -85,15 +77,18 @@
                 <div class="span6">
                     <h4>Our Address </h4>
                     <p>
-                        <i class="icon-map-marker pull-left"></i>259A/3, Nayyar Manzil, Jamia Nagar, </p>
-                    <p>Okhla -110025</p>
-                    <p>
-                        <i class="icon-envelope"></i> &nbsp;info@whitestreak.in
+                        <i class="icon-map-marker pull-left"></i>InDeft Technology Solutions Pvt. Ltd.
+                    </p>
+                    <p>D.K Tower, Sector 20, Airoli, Navi Mumbai - 400708
                     </p>
                     <p>
-                        <i class="icon-phone"></i> &nbsp;+91-9953100933 <br>&nbsp;&nbsp;&nbsp;&nbsp; +91-9958994854</p>
+                        <i class="icon-envelope"></i> &nbsp;enquiry.indeft@indeftts.com
+                    </p>
                     <p>
-                        <i class="icon-globe"></i> &nbsp;www.whitestreak.in
+                        <i class="icon-phone"></i> &nbsp;+91-9167838298
+                    </p>
+                    <p>
+                        <i class="icon-globe"></i> &nbsp;www.indeftts.com
                     </p>
 
                 </div>
@@ -126,84 +121,101 @@
         <iframe width="100%" height="200" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d876.0899498181742!2d77.28753250000003!3d28.55895660000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce40a8e6e0caf%3A0xf7d2ce6fab19bcde!2s259+A%2F3%2C+Noor+Nagar+Extension%2C+Jamia+Nagar%2C+Zakir+Nagar+Okhla%2C+New+Delhi%2C+Delhi+110025!5e0!3m2!1sen!2sin!4v1434114588799"></iframe>
     </section>
 
-<!--Bottom-->
-<section id="bottom" class="main">
-    <!--Container-->
-    <div class="container">
+    <!--Bottom-->
+    <section id="bottom" class="main">
+        <!--Container-->
+        <div class="container">
 
-        <!--row-fluids-->
-        <div class="row-fluid">
+            <!--row-fluids-->
+            <div class="row-fluid">
 
-            <!--Contact Form-->
-            <div class="span3">
-                <h4>ADDRESS</h4>
-                <ul class="unstyled address">
-                    <li>
-                        <i class="icon-home"></i><strong>Address:</strong>
-                        <p>259A/3, Nayyar Manzil, Jamia Nagar, </p>
-                        <p>Okhla -110025</p>
-                    </li>
-                    <li>
-                        <i class="icon-envelope"></i>
-                        <strong>Email: </strong> info@whitestreak.in
-                    </li>
-                    <li>
-                        <i class="icon-globe"></i>
-                        <strong>Website:</strong> www.whitestreak.in</li>
-                    <li>
-                        <i class="icon-phone"></i>
-                        <strong>Contact:</strong> +91-9953100933 <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; +91-9958994854</li>
-                </ul>
-            </div>
-            <!--End Contact Form-->
+                <div class="span3">
+                    <p>
+                        <img src="https://www.indeftts.com/img/logo_white.png" alt="">
+                    </p>
+                    <p>
+                        With its inception in 2016 InDeft Technology Solutions became one of the leading IT solution provider India and abroad. With our professional approach & experienced resources we have become a trusted name global IT Solution and Services Partner for our clients.
+                    </p>
+                </div>
 
-            <!--Important Links-->
-            <div id="tweets" class="span3">
-                <h4>OUR COMPANY</h4>
-                <div>
-                    <ul class="arrow">
-                        <li><a href="our-story.html">Our Story</a></li>
+                <!--Important Links-->
+                <div id="tweets" class="span3">
+                    <h4>GENERAL LINKS</h4>
+                    <div>
+                        <ul class="arrow">
+                            <li><a href="home.html">Home</a></li>
+                            <li><a href="about-us.html">About Us</a></li>
+                            <li><a href="services.html">Services</a></li>
+                            <li><a href="partners.html">Partners</a></li>
+                            <li><a href="career.html">Career</a></li>
+                            <li><a href="contact-us.html">Contact Us</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <!--Important Links-->
+
+                <!--Contact Form-->
+                <div class="span3">
+                    <h4>ADDRESS</h4>
+                    <ul class="unstyled address">
+                        <li>
+                            <i class="icon-map-marker"></i>
+                            D.K Tower, Sector 20, Airoli, Navi Mumbai - 400708
+                        </li>
+                        <li>
+                            <i class="icon-phone"></i>
+                            Phone (India) : +91 9167838298
+                        </li>
+                        <li>
+                            <i class="icon-envelope"></i>
+                            E-mail : enquiry.indeft@indeftts.com
+                        </li>
                     </ul>
-                </div>  
-            </div>
-            <!--Important Links-->
+                </div>
+                <!--End Contact Form-->
 
-      <!--Archives--><!--End Archives--></div>
-    <!--/row-fluid-->
-</div>
-<!--/container-->
 
-</section>
-<!--/bottom-->
+                <div class="span3">
+                    <h4>OUR SOCIAL</h4>
+                    <ul class="unstyled social btn-social inline">
+                        <li>
+                            <i class="icon-facebook icon-medium"></i>
+                        </li>
+                        <li>
+                            <i class="icon-twitter icon-medium"></i>
+                        </li>
+                        <li>
+                            <i class="icon-google-plus icon-medium"></i>
+                        </li>
+                        <li>
+                            <i class="icon-instagram icon-medium"></i>
+                        </li>
+                        </li>
+                    </ul>
+                </div>
 
-<!--Footer-->
-<footer id="footer">
-    <div class="container">
-        <div class="row-fluid">
-            <div class="span5 cp">
-                &copy; 2015 White Streak.<img src="images/silverlogo.png" width="29" height="29"> Silverline Productions. All Rights Reserved. 
-            </div>
-            <!--/Copyright-->
-
-            <div class="span6">
-                <ul class="social pull-right">
-                    <li><a href="https://www.facebook.com/pages/White-streak/181876225201156?fref=ts"><i class="icon-facebook"></i></a></li>          
-                    <li><a href="https://twitter.com/whitestreak3"><i class="icon-twitter"></i></a></li>         
-                    <li><a href="https://instagram.com/streakofwhite"><i class="icon-instagram"></i></a></li>      
-                    <li><a href="https://www.youtube.com/channel/UCRJ9uQBO-wZpmp6p5wlvTbQ"><i class="icon-youtube"></i></a></li>        
-                </ul>
-            </div>
-
-            <div class="span1">
-                <a id="gototop" class="gototop pull-right" href="#"><i class="icon-angle-up"></i></a>
-            </div>
-            <!--/Goto Top-->
+                <!--Archives--><!--End Archives--></div>
+            <!--/row-fluid-->
         </div>
-    </div>
-</footer>
-<!--/Footer-->
+        <!--/container-->
 
-<script src="js/vendor/jquery-1.9.1.min.js"></script>
+    </section>
+    <!--/bottom-->
+
+    <!--Footer-->
+    <footer id="footer">
+        <div class="container">
+            <div class="row-fluid text-center">
+                Copyright &copy; InDeft, 2017. Designed by <a href="https://www.webaholic.co.in/">Webaholic</a>
+                <!--/Copyright-->
+            </div>
+        </div>
+    </footer>
+    <!--/Footer-->
+
+
+
+    <script src="js/vendor/jquery-1.9.1.min.js"></script>
 <script src="js/vendor/bootstrap.min.js"></script>
 <script src="js/main.js"></script>   
 
