--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Home | White Streak</title>
+    <title>Home | InDeft Technology Solutions Pvt Ltd.</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
 
@@ -42,22 +42,7 @@
                     <ul class="nav">
                         <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About Us</a></li>
-                        <li class="dropdown">
-							<a href="#" class="dropdown-toggle" data-toggle="dropdown">Services<i class="icon-angle-down"></i></a>
-							<ul class="dropdown-menu">
-                                <li><a href="services.html">What We Do</a></li>
-                                <li><a href="pricing.html">Our Different Packages</a></li>
-                            </ul>
-						</li>
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Gallery <i class="icon-angle-down"></i></a>
-                            <ul class="dropdown-menu">
-                                <li><a href="gallery.html">Child Photography</a></li>
-                                <li><a href="parent-gallery.html">Parent Child Photography</a></li>
-                                <li><a href="album.html">Albums and Posters</a></li>
-                                <li><a href="gifts.html">Customized Gifts</a></li>
-                            </ul>
-                        </li>                        
+                        <li><a href="services.html">Services</a></li>
                         <li><a href="partners.html">Partners</a></li>
                         <li><a href="careers.html">Career</a></li>
                         <li><a href="contact-us.html">Contact</a></li>
@@ -81,8 +66,8 @@
             <div class="sl-slide item1" data-orientation="horizontal" data-slice1-rotation="-25" data-slice2-rotation="-25" data-slice1-scale="2" data-slice2-scale="2">
                 <div class="sl-slide-inner">
                     <div class="container">
-                        <img class="pull-right" src="images/real-images/1.jpg" alt="" />
-                        <h2>Create</h2>
+                        <img class="pull-right" src="https://www.indeftts.com/img/slider/slide1.jpg" alt="" />
+                        <h2>YOUR GLOBAL IT PARTNER</h2>
                     </div>
                 </div>
             </div>
@@ -92,8 +77,8 @@
             <div class="sl-slide item2" data-orientation="vertical" data-slice1-rotation="10" data-slice2-rotation="-15" data-slice1-scale="1.5" data-slice2-scale="1.5">
                 <div class="sl-slide-inner">
                     <div class="container">
-                        <img class="pull-right" src="images/real-images/2.jpg" alt="" />
-                        <h2>Capture</h2>
+                        <img class="pull-right" src="https://www.indeftts.com/img/slider/slide2.jpg" alt="" />
+                        <h2>CUSTOMISED IT SOLUTIONS</h2>
                     </div>
                 </div>
             </div>
@@ -103,8 +88,8 @@
             <div class="sl-slide item3" data-orientation="horizontal" data-slice1-rotation="3" data-slice2-rotation="3" data-slice1-scale="2" data-slice2-scale="1">
                 <div class="sl-slide-inner">
                    <div class="container">
-                    <img class="pull-right" src="images/real-images/3.jpg" alt="" />
-                    <h2>Cherish</h2>
+                    <img class="pull-right" src="https://www.indeftts.com/img/slider/slide3.jpg" alt="" />
+                    <h2>WORLD CLASS SUPPORT</h2>
                 </div>
             </div>
         </div>
