--- a/contact-us.html
+++ b/contact-us.html
@@ -118,7 +118,7 @@
     </section>
 
     <section class="no-margin">
-        <iframe width="100%" height="200" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d876.0899498181742!2d77.28753250000003!3d28.55895660000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce40a8e6e0caf%3A0xf7d2ce6fab19bcde!2s259+A%2F3%2C+Noor+Nagar+Extension%2C+Jamia+Nagar%2C+Zakir+Nagar+Okhla%2C+New+Delhi%2C+Delhi+110025!5e0!3m2!1sen!2sin!4v1434114588799"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3768.7642588107065!2d72.98934191508997!3d19.161793737038774!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7b8b4e12f95b5%3A0xd2f32d37864cd4fe!2sDK+Tower%2C+Gaothan+Sector+20+Airoli+Rd%2C+Sector+20%2C+Airoli%2C+Navi+Mumbai%2C+Maharashtra+400708!5e0!3m2!1sen!2sin!4v1517826925773" width="100%" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
     </section>
 
     <!--Bottom-->
